--- a/resources/tools/jekyll-converter/page-convert-jekyll.html
+++ b/resources/tools/jekyll-converter/page-convert-jekyll.html
@@ -60,7 +60,7 @@ script:
                 </select>
             </div>
             <fieldset class="gc-chckbxrdio form-inline mrgn-lft-md mrgn-bttm-md">
-                <legend>Front Matter type:</legend>
+                <legend>Front Matter code:</legend>
                     <div class="radio label-inline">
                         <input type="radio" name="frontmatter" id="yaml" value="yaml" checked="checked">
                         <label for="yaml">YAML</label>
