--- a/resources/tools/jekyll-converter/page-convert-jekyll.html
+++ b/resources/tools/jekyll-converter/page-convert-jekyll.html
@@ -216,6 +216,10 @@ script:
         e.preventDefault();
     });
 
+    document.getElementById("uri").addEventListener("focus", function () {
+        this.select();
+    });
+
 /*
     // clear text button
     document.getElementById("cleartextbtn").addEventListener("click", function () {
