--- a/resources/tools/index.html
+++ b/resources/tools/index.html
@@ -1,6 +1,6 @@
 ---
 testBanner: false
-title: "Developer options"
+title: "Test banner developer options"
 dateModified: 2025-07-09
 dateIssued: 2025-07-09
 nomenu: true
