--- a/resources/tools/jekyll-converter/page-convert-jekyll.html
+++ b/resources/tools/jekyll-converter/page-convert-jekyll.html
@@ -62,7 +62,7 @@ script:
             <div class="form-group">
                 <div class="col-xs-5">
                     <label for="github_path" class="h5 mrgn-tp-sm">GitHub repository destination path:</label>
-                    <input placeholder="Enter the GitHub repository destination path" class="form-control full-width input-lg mrgn-bttm-md" name="github_path" id="github_path" type="url">
+                    <input placeholder="Enter path" class="form-control full-width input-lg mrgn-bttm-md" name="github_path" id="github_path" type="url">
                 </div>
             </div>
             <div class="clearfix"></div>
