fix field resize width

--- a/resources/tools/jekyll-converter/page-convert-jekyll.html
+++ b/resources/tools/jekyll-converter/page-convert-jekyll.html
@@ -60,7 +60,7 @@ script:
                 </select>
             </div>
             <div class="form-group">
-                <div class="col-xs-5">
+                <div class="col-xs-12 col-sm-7 col-md-6 col-lg-5">
                     <label for="github_path" class="h5 mrgn-tp-sm">GitHub repository destination path:</label>
                     <input placeholder="Enter path" class="form-control full-width input-lg mrgn-bttm-md" name="github_path" id="github_path" type="url">
                 </div>
