--- a/resources/tools/jekyll-converter/page-convert-jekyll.html
+++ b/resources/tools/jekyll-converter/page-convert-jekyll.html
@@ -96,7 +96,7 @@ script:
             <div class="col-lg-12">
                 <label class="required control-label mrgn-lft-sm h5 mrgn-tp-sm" for="uri">URL <strong class="required">(required)</strong></label>
                 <div class="input-group">
-                    <input type="url" id="uri" name="uri" class="form-control input-md mrgn-bttm-md full-width" placeholder="Enter a URL" autofocus="autofocus" aria-labelledby="uri" required="required">
+                    <input type="url" id="uri" name="uri" class="form-control input-md mrgn-bttm-md full-width" placeholder="Enter a URL" autofocus="autofocus" autocomplete="on" aria-labelledby="uri" required="required">
                     <span class="input-group-btn">
                         <input id="submitbutton" class="btn btn-primary" type="submit" value="Submit">
                     </span>
