--- a/resources/tools/jekyll-converter/page-convert-jekyll.html
+++ b/resources/tools/jekyll-converter/page-convert-jekyll.html
@@ -110,7 +110,7 @@ script:
 
 <form id="results" accept-charset="UTF-8" enctype="application/x-www-form-urlencoded" method="get" action="#">
     <fieldset class="legend-brdr-bttm">
-        <legend class="mrgn-tp-md mrgn-bttm-md h2">Result</legend>
+        <legend class="mrgn-tp-md mrgn-bttm-md h2">Results</legend>
         <div class="form-group">
             <label for="sourcetext" id="contentlabel" class="control-label h5 mrgn-tp-sm"><span class="field-name">Source:</span></label>
             <!-- START Result textarea -->
