--- a/404.html
+++ b/404.html
@@ -1,10 +1,11 @@
 ---
 layout: without-h1
 testBanner: false
-title: "We couldn't find that Web page"
-dateModified: 2024-10-11
+title: "Not Found"
+# dateModified: 2024-10-11
 dateIssued: 2024-10-09
 permalink: /404.html
+breadcrumbs: false
 feedback: false
 share: false
 ---
