--- a/404.html
+++ b/404.html
@@ -2,12 +2,13 @@
 layout: without-h1
 testBanner: false
 title: "Not Found"
-# dateModified: 2024-10-11
+dateModified: 2024-10-11
 dateIssued: 2024-10-09
 permalink: /404.html
 breadcrumbs: false
 feedback: false
 share: false
+noFooterContextual: true
 ---
 
 <div class="row mrgn-tp-lg">
