--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@ noFooterContextual: true
         <p class="pagetag"><strong>Error 404</strong></p>
     </div>
 </div>
-<div class="row mrgn-bttm-lg">
+<div class="row">
     <div class="col-md-12">
         <p>We're sorry you ended up here. Sometimes a page gets moved or deleted, but hopefully we can help you find what you're looking for. What next?</p>
         <ul>
