--- a/resources/tools/jekyll-converter/page-convert-jekyll.html
+++ b/resources/tools/jekyll-converter/page-convert-jekyll.html
@@ -79,23 +79,25 @@ script:
                     </span>
                 </div>
             </div>
-            <hr>
-            <fieldset class="gc-chckbxrdio">
-                <ul class="list-unstyled form-inline lst-spcd-2">
-                    <li class="checkbox mrgn-lft-md">
-                        <input id="addStyles" type="checkbox" checked="checked" value="true">
-                        <label for="addStyles">Include all <code>&lt;style&gt;</code> tags</label>
-                    </li>
-                    <li class="checkbox mrgn-lft-md">
-                        <input id="addScripts" type="checkbox" checked="checked" value="true">
-                        <label for="addScripts">Include all inline <code>&lt;script&gt;</code> tags</label>
-                    </li>
-                    <li class="checkbox mrgn-lft-md">
-                        <input id="usePrettier" type="checkbox" checked="checked" value="true">
-                        <label for="usePrettier">Format HTML (Prettier)</label>
-                    </li>
-                </ul>
-            </fieldset>
+            <div class="col-xs-12">
+                <hr>
+                <fieldset class="gc-chckbxrdio">
+                    <ul class="list-unstyled form-inline lst-spcd-2 mrgn-bttm-md">
+                        <li class="checkbox mrgn-lft-md">
+                            <input id="addStyles" type="checkbox" checked="checked" value="true">
+                            <label for="addStyles">Include all <code>&lt;style&gt;</code> tags</label>
+                        </li>
+                        <li class="checkbox mrgn-lft-md">
+                            <input id="addScripts" type="checkbox" checked="checked" value="true">
+                            <label for="addScripts">Include all inline <code>&lt;script&gt;</code> tags</label>
+                        </li>
+                        <li class="checkbox mrgn-lft-md">
+                            <input id="usePrettier" type="checkbox" checked="checked" value="true">
+                            <label for="usePrettier">Format HTML (Prettier)</label>
+                        </li>
+                    </ul>
+                </fieldset>
+            </div>
             <div id="advcntrls">
                 <div class="form-group">
                     <div class="col-xs-12 col-sm-7 col-md-6 col-lg-5">
